--- a/services.html
+++ b/services.html
@@ -42,7 +42,7 @@
                     <div class="second-pic h-100 pictures">
                     </div>
                     <div class="bckg">
-                        <p class="text-center fs-3 fw-bold write">Office Cleaning and Maintenance</p>
+                        <p class="text-center fs-3 fw-bold write">Office Cleaning Services</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-3 col-lg-3 container-fluid mt-3">
