--- a/services.html
+++ b/services.html
@@ -49,7 +49,7 @@
                     <div class="third-pic h-100 pictures">
                     </div>
                     <div class="bckg">
-                        <p class="text-center fs-3 fw-bold write">General Fumigation Services</p>
+                        <p class="text-center fs-3 fw-bold write">Fumigation Services</p>
                     </div>
                 </div>
                 
