--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="third-pic h-100 pictures">
                 </div>
                 <div class="bckg">
-                    <p class="text-center fs-3 fw-bold write">Fumigation Services</p>
+                    <p class="text-center fs-3 fw-bold write">Crisp Fumigation Services</p>
                 </div>
             </div>
         </div>
