--- a/index.html
+++ b/index.html
@@ -120,6 +120,28 @@
         </div>
     </section>
 
+    <footer>
+        <div class=" container bot">
+            <div class="d-flex justify-content-between container col-lg-6 col-md-10 col-sm-12 py-2">
+                <div class="d-flex align-item-center flex-column">
+                    <a href="index.html" class="fs-3 text-decoration-none text-white navbar-brand">Klean Easy</a>
+                    <h5>Copyright 2021.</h5>
+                </div>
+                <div>
+                    <li class="">
+                        <a class="text-decoration-none text-white" href="./services.html">Our Services</a>
+                    </li>
+                    <li class="">
+                        <a class="text-decoration-none text-white" href="./about-us.html">About Us</a>
+                    </li>
+                    <li class="">
+                        <a class="text-decoration-none text-white" href="./contact-us.html">Contact Us</a>
+                    </li>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     
     <script src="./Script/bootstrap.min.js"></script>
 </body>
