--- a/about-us.html
+++ b/about-us.html
@@ -30,7 +30,7 @@
         <h1 class="text-center pt-4 glow">About Us</h1>
         <div class="d-flex justify-content-between mean mt-5 mx-2">
             <div class="col-12 col-md-3 col-lg-3 mx-3 container mean-2">
-                <div class="vibe-one"></div>
+                <div class="vibe-one apt-2 apt-height"></div>
                 <div class="text-center mt-4 glow">
                     <h1>The Best Practices</h1>
                 </div>
@@ -41,7 +41,7 @@
                 </p>
             </div>
             <div class="col-12 col-md-3 col-lg-3 mx-3 container mean-2">
-                <div class="vibe-two"></div>
+                <div class="vibe-two apt-2 apt-height"></div>
                 <div class="text-center mt-4 glow">
                     <h1>International Reach</h1>
                 </div>
@@ -52,7 +52,7 @@
                 </p>
             </div>
             <div class="col-12 col-md-3 col-lg-3 mx-3 container mean-2">
-                <div class="vibe-three"></div>
+                <div class="vibe-three apt-2 apt-height"></div>
                 <div class="text-center mt-4 glow">
                     <h1>Extensive Experience</h1>
                 </div>
@@ -69,14 +69,14 @@
         <h1 class="text-center my-5 glow">The Team</h1>
         <div class="d-flex justify-content-between flexx">
             <div class="col-sm-12 col-md-6 col-lg-6 d-flex">
-                <div class="ceo"></div>
+                <div class="ceo apt-2 apt-height-2"></div>
                 <div class="mx-2">
                     <h1 class="glow">Mary Silas</h1>
                     <P>Chief executive officer</P>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-6 d-flex flexx-2">
-                <div class="coo"></div>
+                <div class="coo apt-2 apt-height-2"></div>
                 <div class="mx-2">
                     <h1 class="glow">Raman Singh</h1>
                     <P>Chief operating officer</P>
@@ -85,14 +85,14 @@
         </div>
         <div class="d-flex justify-content-between my-5 flexx">
             <div class="col-sm-12 col-md-6 col-lg-6 d-flex">
-                <div class="cfo"></div>
+                <div class="cfo apt-2 apt-height-2"></div>
                 <div class="mx-2">
                     <h1 class="glow">Tope Nuru</h1>
                     <P>Chief financial officer</P>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-6 d-flex flexx-2">
-                <div class="s-m"></div>
+                <div class="s-m apt-2 apt-height-2"></div>
                 <div class="mx-2">
                     <h1 class="glow">Fatimah Bala</h1>
                     <P>Head of sales and marketing</P>
