--- a/services.html
+++ b/services.html
@@ -57,21 +57,21 @@
             <div>
                 <div class="d-flex justify-content-evenly container-fluid my-4 pr">
                     <div class="col-12 col-md-3 col-lg-3 container-fluid mt-3">
-                        <div class="pic-one h-100 pictures">
+                        <div class="pic-one h-100 pictures apt-2">
                         </div>
                         <div class="bckg">
                             <p class="text-center fw-bold fs-3 write">Deep Cleaning</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-3 col-lg-3 container-fluid mt-3">
-                        <div class="pic-two h-100 pictures">
+                        <div class="pic-two h-100 pictures apt-2">
                         </div>
                         <div class="bckg">
                             <p class="text-center fs-3 fw-bold write">Laundry Services</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-3 col-lg-3 container-fluid mt-3">
-                        <div class="pic-three h-100 pictures">
+                        <div class="pic-three h-100 pictures apt-2">
                         </div>
                         <div class="bckg">
                             <p class="text-center fs-3 fw-bold write">Janitorial Services</p>
