--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
     </nav>
 
-    <section class="clean-one container-fluid vw-100 apt-2">
+    <section class="clean-one container vw-100 apt-2">
         <div class="container text-center pt-4">
             <p class="fs-1 dif-color fw-bold font-italic">Never worry again about dirt!</p>
             <p class="fs-2 font-italic">From home and office cleaning, to fumigation, we've got you covered to the tiniest detail.</p>
