--- a/index.html
+++ b/index.html
@@ -31,22 +31,22 @@
             <p class="fs-1 dif-color fw-bold font-italic">Never worry again about dirt!</p>
             <p class="fs-2 font-italic">From home and office cleaning, to fumigation, we've got you covered to the tiniest detail.</p>
         </div>
-        <div class="d-flex justify-content-evenly container-fluid my-4 pr">
-            <div class="col-12 col-md-3 col-lg-3 container-fluid mt-3">
+        <div class="d-flex justify-content-evenly container my-4 pr">
+            <div class="col-12 col-md-3 col-lg-3 container mt-3">
                 <div class="first-pic h-100 pictures apt-2">
                 </div>
                 <div class="bckg">
                     <p class="text-center fw-bold fs-3 write">Home Cleaning Services</p>
                 </div>
             </div>
-            <div class="col-12 col-md-3 col-lg-3 container-fluid mt-3">
+            <div class="col-12 col-md-3 col-lg-3 container mt-3">
                 <div class="second-pic h-100 pictures apt-2">
                 </div>
                 <div class="bckg">
                     <p class="text-center fs-3 fw-bold write">Office Cleaning Services</p>
                 </div>
             </div>
-            <div class="col-12 col-md-3 col-lg-3 container-fluid mt-3">
+            <div class="col-12 col-md-3 col-lg-3 container mt-3">
                 <div class="third-pic h-100 pictures apt-2">
                 </div>
                 <div class="bckg">
