--- a/about-us.html
+++ b/about-us.html
@@ -14,13 +14,13 @@
             <a href="index.html" class="fs-2 text-decoration-none first-text navbar-brand">Klean Easy</a>
               <ul class="nav nav-pills navbar-nav ">
                 <li class="nav-item">
-                  <a class="nav-link change" href="./services.html">Our Services</a>
+                  <a class="nav-link first-text" href="./services.html">Our Services</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link change" href="./about-us.html">About Us</a>
+                  <a class="nav-link first-text" href="./about-us.html">About Us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link change" href="./contact-us.html">Contact Us</a>
+                  <a class="nav-link first-text" href="./contact-us.html">Contact Us</a>
                 </li>
               </ul>
         </div>
@@ -28,7 +28,7 @@
 
     <section class="container about mt-4">
         <h1 class="text-center pt-4 glow">About Us</h1>
-        <div class="d-flex justify-content-between mean mt-5 mx-2">
+        <div class="d-flex justify-content-between mean pr mt-5 mx-2">
             <div class="col-12 col-md-3 col-lg-3 mx-3 container mean-2">
                 <div class="vibe-one apt-2 apt-height"></div>
                 <div class="text-center mt-4 glow">
@@ -67,7 +67,7 @@
 
     <section class="container my-3">
         <h1 class="text-center my-5 glow">The Team</h1>
-        <div class="d-flex justify-content-between flexx">
+        <div class="d-flex justify-content-between pr">
             <div class="col-sm-12 col-md-6 col-lg-6 d-flex">
                 <div class="ceo apt-2 apt-height-2"></div>
                 <div class="mx-2">
@@ -75,7 +75,7 @@
                     <P>Chief executive officer</P>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-6 d-flex flexx-2">
+            <div class="col-sm-12 col-md-6 col-lg-6 d-flex noni">
                 <div class="coo apt-2 apt-height-2"></div>
                 <div class="mx-2">
                     <h1 class="glow">Raman Singh</h1>
@@ -83,7 +83,7 @@
                 </div>
             </div>
         </div>
-        <div class="d-flex justify-content-between my-5 flexx">
+        <div class="d-flex justify-content-between my-5 pr">
             <div class="col-sm-12 col-md-6 col-lg-6 d-flex">
                 <div class="cfo apt-2 apt-height-2"></div>
                 <div class="mx-2">
@@ -91,7 +91,7 @@
                     <P>Chief financial officer</P>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-6 d-flex flexx-2">
+            <div class="col-sm-12 col-md-6 col-lg-6 d-flex noni">
                 <div class="s-m apt-2 apt-height-2"></div>
                 <div class="mx-2">
                     <h1 class="glow">Fatimah Bala</h1>
