--- a/contact-us.html
+++ b/contact-us.html
@@ -14,13 +14,13 @@
             <a href="index.html" class="fs-2 text-decoration-none first-text navbar-brand">Klean Easy</a>
               <ul class="nav nav-pills navbar-nav ">
                 <li class="nav-item">
-                  <a class="nav-link change" href="./services.html">Our Services</a>
+                  <a class="nav-link first-text" href="./services.html">Our Services</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link change" href="./about-us.html">About Us</a>
+                  <a class="nav-link first-text" href="./about-us.html">About Us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link change" href="./contact-us.html">Contact Us</a>
+                  <a class="nav-link first-text" href="./contact-us.html">Contact Us</a>
                 </li>
               </ul>
         </div>
@@ -29,7 +29,7 @@
     <section class="container my-4">
         <h1 class="glow">Contact Us</h1>
     </section>
-    <section class="container d-flex justify-content-between flow">
+    <section class="container d-flex justify-content-between pr">
         <div class="col-md-6 col-lg-6 col-sm-12">
             <form action="/action_page.php">
                 <div class="mb-3 mt-3">
@@ -67,7 +67,7 @@
     </section>
 
     <footer>
-        <div class=" container bot">
+        <div class=" container bot mt-3">
             <div class="d-flex justify-content-between container col-lg-6 col-md-10 col-sm-11 py-2">
                 <div class="d-flex align-item-center flex-column">
                     <a href="index.html" class="fs-3 text-decoration-none text-white navbar-brand">Klean Easy</a>
