--- a/services.html
+++ b/services.html
@@ -14,13 +14,13 @@
             <a href="index.html" class="fs-2 text-decoration-none first-text navbar-brand">Klean Easy</a>
               <ul class="nav nav-pills navbar-nav ">
                 <li class="nav-item">
-                  <a class="nav-link change" href="./services.html">Our Services</a>
+                  <a class="nav-link first-text" href="./services.html">Our Services</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link change" href="./about-us.html">About Us</a>
+                  <a class="nav-link first-text" href="./about-us.html">About Us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link change" href="./contact-us.html">Contact Us</a>
+                  <a class="nav-link first-text" href="./contact-us.html">Contact Us</a>
                 </li>
               </ul>
         </div>
@@ -32,23 +32,23 @@
         <div>
             <div class="d-flex justify-content-evenly container-fluid my-4 pr">
                 <div class="col-12 col-md-3 col-lg-3 container-fluid mt-3">
-                    <div class="first-pic h-100 pictures">
+                    <div class="first-pic h-100 pictures apt-2">
                     </div>
-                    <div class="bckg">
+                    <div class="bot">
                         <p class="text-center fw-bold fs-3 write">Home Cleaning Services</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-3 col-lg-3 container-fluid mt-3">
-                    <div class="second-pic h-100 pictures">
+                    <div class="second-pic h-100 pictures apt-2">
                     </div>
-                    <div class="bckg">
+                    <div class="bot">
                         <p class="text-center fs-3 fw-bold write">Office Cleaning Services</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-3 col-lg-3 container-fluid mt-3">
-                    <div class="third-pic h-100 pictures">
+                    <div class="third-pic h-100 pictures apt-2">
                     </div>
-                    <div class="bckg">
+                    <div class="bot">
                         <p class="text-center fs-3 fw-bold write">Crisp Fumigation Services</p>
                     </div>
                 </div>
@@ -59,21 +59,21 @@
                     <div class="col-12 col-md-3 col-lg-3 container-fluid mt-3">
                         <div class="pic-one h-100 pictures apt-2">
                         </div>
-                        <div class="bckg">
+                        <div class="bot">
                             <p class="text-center fw-bold fs-3 write">Deep Cleaning</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-3 col-lg-3 container-fluid mt-3">
                         <div class="pic-two h-100 pictures apt-2">
                         </div>
-                        <div class="bckg">
+                        <div class="bot">
                             <p class="text-center fs-3 fw-bold write">Laundry Services</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-3 col-lg-3 container-fluid mt-3">
                         <div class="pic-three h-100 pictures apt-2">
                         </div>
-                        <div class="bckg">
+                        <div class="bot">
                             <p class="text-center fs-3 fw-bold write">Janitorial Services</p>
                         </div>
                     </div>
