--- a/about-us.html
+++ b/about-us.html
@@ -30,7 +30,7 @@
         <h1 class="text-center pt-4 glow">About Us</h1>
         <div class="d-flex justify-content-between mean pr mt-5 mx-2">
             <div class="col-12 col-md-3 col-lg-3 mx-3 container mean-2">
-                <div class="vibe-one apt-2 apt-height"></div>
+                <div style="background-image: url(./Images/towfiqu-barbhuiya--9gPKrsbGmc-unsplash.jpg);" class="vibe-one apt-2 apt-height"></div>
                 <div class="text-center mt-4 glow">
                     <h1>The Best Practices</h1>
                 </div>
@@ -41,7 +41,7 @@
                 </p>
             </div>
             <div class="col-12 col-md-3 col-lg-3 mx-3 container mean-2">
-                <div class="vibe-two apt-2 apt-height"></div>
+                <div style="background-image: url(./Images/artem-beliaikin-42OiN2WhCPs-unsplash.jpg);" class="vibe-two apt-2 apt-height"></div>
                 <div class="text-center mt-4 glow">
                     <h1>International Reach</h1>
                 </div>
@@ -52,7 +52,7 @@
                 </p>
             </div>
             <div class="col-12 col-md-3 col-lg-3 mx-3 container mean-2">
-                <div class="vibe-three apt-2 apt-height"></div>
+                <div style="background-image: url(./Images/nick-hillier-yD5rv8_WzxA-unsplash.jpg);" class="vibe-three apt-2 apt-height"></div>
                 <div class="text-center mt-4 glow">
                     <h1>Extensive Experience</h1>
                 </div>
@@ -69,14 +69,14 @@
         <h1 class="text-center my-5 glow">The Team</h1>
         <div class="d-flex justify-content-between pr">
             <div class="col-sm-12 col-md-6 col-lg-6 d-flex">
-                <div class="ceo apt-2 apt-height-2"></div>
+                <div style="background-image: url(./Images/eye-for-ebony-aZzXKGcyWqk-unsplash.jpg);" class="ceo apt-2 apt-height-2"></div>
                 <div class="mx-2">
                     <h1 class="glow">Mary Silas</h1>
                     <P>Chief executive officer</P>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-6 d-flex noni">
-                <div class="coo apt-2 apt-height-2"></div>
+                <div style="background-image: url(./Images/jurica-koletic-7YVZYZeITc8-unsplash.jpg);" class="coo apt-2 apt-height-2"></div>
                 <div class="mx-2">
                     <h1 class="glow">Raman Singh</h1>
                     <P>Chief operating officer</P>
@@ -85,14 +85,14 @@
         </div>
         <div class="d-flex justify-content-between my-5 pr">
             <div class="col-sm-12 col-md-6 col-lg-6 d-flex">
-                <div class="cfo apt-2 apt-height-2"></div>
+                <div style="background-image: url(./Images/christian-lunde-v-dd__G7g7k-unsplash.jpg);" class="cfo apt-2 apt-height-2"></div>
                 <div class="mx-2">
                     <h1 class="glow">Tope Nuru</h1>
                     <P>Chief financial officer</P>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-6 d-flex noni">
-                <div class="s-m apt-2 apt-height-2"></div>
+                <div style="background-image: url(./Images/jeffery-erhunse-BQMZ5ligqps-unsplash.jpg);" class="s-m apt-2 apt-height-2"></div>
                 <div class="mx-2">
                     <h1 class="glow">Fatimah Bala</h1>
                     <P>Head of sales and marketing</P>
