--- a/services.html
+++ b/services.html
@@ -32,24 +32,24 @@
         <div>
             <div class="d-flex justify-content-evenly container-fluid my-4 pr">
                 <div class="col-12 col-md-3 col-lg-3 container-fluid mt-3">
-                    <div class="first-pic h-100 pictures apt-2">
+                    <div style="background-image: url(./Images/cdc-jjrXvzbqC5E-unsplash\ \(1\).jpg);" class="first-pic h-100 pictures apt-2">
                     </div>
                     <div class="bot">
-                        <p class="text-center fw-bold fs-3 write">Home Cleaning Services</p>
+                        <p class="text-center fw-bold fs-3 text-white">Home Cleaning Services</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-3 col-lg-3 container-fluid mt-3">
-                    <div class="second-pic h-100 pictures apt-2">
+                    <div style="background-image: url(./Images/benjamin-child-0sT9YhNgSEs-unsplash.jpg);" class="second-pic h-100 pictures apt-2">
                     </div>
                     <div class="bot">
-                        <p class="text-center fs-3 fw-bold write">Office Cleaning Services</p>
+                        <p class="text-center fs-3 fw-bold text-white">Office Cleaning Services</p>
                     </div>
                 </div>
                 <div class="col-12 col-md-3 col-lg-3 container-fluid mt-3">
-                    <div class="third-pic h-100 pictures apt-2">
+                    <div style="background-image: url(./Images/diego-san-2hRHb1OGRYs-unsplash\ \(1\).jpg);" class="third-pic h-100 pictures apt-2">
                     </div>
                     <div class="bot">
-                        <p class="text-center fs-3 fw-bold write">Crisp Fumigation Services</p>
+                        <p class="text-center fs-3 fw-bold text-white">Crisp Fumigation Services</p>
                     </div>
                 </div>
                 
@@ -57,24 +57,24 @@
             <div>
                 <div class="d-flex justify-content-evenly container-fluid my-4 pr">
                     <div class="col-12 col-md-3 col-lg-3 container-fluid mt-3">
-                        <div class="pic-one h-100 pictures apt-2">
+                        <div style="background-image: url(./Images/towfiqu-barbhuiya-ho-p7qLBewk-unsplash.jpg);" class="pic-one h-100 pictures apt-2">
                         </div>
                         <div class="bot">
-                            <p class="text-center fw-bold fs-3 write">Deep Cleaning</p>
+                            <p class="text-center fw-bold fs-3 text-white">Deep Cleaning</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-3 col-lg-3 container-fluid mt-3">
-                        <div class="pic-two h-100 pictures apt-2">
+                        <div style="background-image: url(./Images/dan-gold-aJN-jjFLyCU-unsplash.jpg);" class="pic-two h-100 pictures apt-2">
                         </div>
                         <div class="bot">
-                            <p class="text-center fs-3 fw-bold write">Laundry Services</p>
+                            <p class="text-center fs-3 fw-bold text-white">Laundry Services</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-3 col-lg-3 container-fluid mt-3">
-                        <div class="pic-three h-100 pictures apt-2">
+                        <div style="background-image: url(./Images/jon-tyson-jgaxGjXKlpw-unsplash.jpg);" class="pic-three h-100 pictures apt-2">
                         </div>
                         <div class="bot">
-                            <p class="text-center fs-3 fw-bold write">Janitorial Services</p>
+                            <p class="text-center fs-3 fw-bold text-white">Janitorial Services</p>
                         </div>
                     </div>
                 </div>
