--- a/contact-us.html
+++ b/contact-us.html
@@ -56,7 +56,7 @@
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>
-        <div class="col-sm-11 col-md-5 col-lg-5 space">
+        <div class="col-sm-11 col-md-5 col-lg-5 noni">
             <div>
                 <h2 class="glow">Address</h2>
                 <p>Plot 78B, Ayinde Marshall Rd., Ikoyi West Wing, <br> Lagos, Nigeria. </p>
